@@ -18,7 +18,7 @@
 .\" WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF
 .\" MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 .\"
-.TH PCAP-FILTER @MAN_MISC_INFO@ "13 June 2023"
+.TH PCAP-FILTER @MAN_MISC_INFO@ "12 February 2024"
 .SH NAME
 pcap-filter \- packet filter syntax
 .br
@@ -896,7 +896,7 @@ and
 .B ^
 operators are currently only supported for filtering in the kernel on
 particular operating systems (for example: FreeBSD, Linux with 3.7 and later
-kernels, NetBSD); on all other systems (for example: AIX, illumos, Solaris,
+kernels, NetBSD); on all other systems (for example: AIX, Hurd, illumos, Solaris,
 OpenBSD), if
 those operators are used, filtering will be done in user mode, which
 will increase the overhead of capturing packets and may cause more
