@@ -47,6 +47,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       Support network capture devices too.
       Fix a few device activation bugs.
       Count and timestamp packets better.
+      Add kernel filtering, fix userland filtering.
 
 DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
   Summary for 1.10.5 libpcap release (so far!)
